Improvements to UI

--- a/public/index.html
+++ b/public/index.html
@@ -45,19 +45,22 @@
             <div class="parallax" style="background-image: url('/energy.jpg'); height: 500px; background-attachment: fixed; background-position: center; background-repeat: no-repeat; background-size: cover;">
             </div>
 
-            <br/><br/>
-            <div>
-                <h2 style="font-weight:bold">From the Principal's Pen</h2>
+            <br/><br/><br/><br/>
+            <div>                
+                <div style="background-color: rgb(210, 63, 85); width: 25%; margin: 0 auto; height: 50px; text-align: center; color: white; border-radius: 20px; display: flex; align-items: center; justify-content: center;">
+                    <h2 style=" margin: 0;">From the Principal's Pen</h2> 
+                    <!-- <h2 style="font-weight:bold; text-decoration: underline;">From the Principal's Pen</h2>    -->
+                </div>
             </div>
-            <div class="flex-container" style="height: 400px;">  
-                <div style="border-radius: 50%; overflow: hidden; width: 300px; height: 200px;">
+            <div class="flex-container" style="width:80%; height: 400px; margin: 0 auto;">  
+                <div style="border-radius: 50%; overflow: hidden; width: 55%; height: 100%; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
                     <img src="/principal.png" alt="Image 1" style="width: 100%; height: 100%; object-fit: cover; transform: scale(1.2) translateX(20px);">
                 </div>          
-                <div class="flex-item">
-                    <section id="our-motto">
-                        <blockquote style="font-style: italic; border-left: 5px solid #ccc; padding-left: 10px; margin: 20px 0;">
-                            <p style="text-align: justify;">Education is the best investment for our future generations. Towards this, Army Public School Noida has dedicated itself to impart inclusive education to the students for their holistic and all round development. At an impressionable and tender age, the children cannot be expected to be sagacious enough to discriminate between ethical and unethical, moral and immoral, good and evil. However, I expect them to achieve a perfect blend of competence and character so as to strengthen the social fibre.</p>
-                        </blockquote>
+                <div class="flex-item" style="width: 100%; height: 50%; display: flex; justify-content: center; align-items: center;">
+                    <section id="our-motto" style="width: 80%;">
+                        <p style="font-style: italic; border-left: 5px solid #ccc; padding-left: 10px; margin: 20px 0; text-align: justify;">
+                            "Education is the best investment for our future generations. Towards this, Army Public School Noida has dedicated itself to impart inclusive education to the students for their holistic and all round development. At an impressionable and tender age, the children cannot be expected to be sagacious enough to discriminate between ethical and unethical, moral and immoral, good and evil. However, I expect them to achieve a perfect blend of competence and character so as to strengthen the social fibre."
+                        </p>
                     </section>
                 </div>
             </div>            
@@ -139,64 +142,76 @@
             </div>
         </section> -->
 
-        <!-- Items Section End -->
+        <!-- Items Section End -->        
 
-        <div class="hero" style="border: 2px solid black;">
-            <h2 style="font-weight:bold">Recent Events</h2>
+        <div class="hero" style="">
+            <hr /><br /><br /><br />            
+            <div style="background-color: rgb(210, 63, 85); width: 15%; margin: 0 auto; height: 50px; text-align: center; color: white; border-radius: 20px; display: flex; align-items: center; justify-content: center;">
+                <h2 style=" margin: 0;">Recent Events</h2>    
+            </div>
+            
 
-            <div class="flex-container" style="height: 500px; ">  
-                <div class="flex-item" style="width: 50%; height: 60%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">
-                    <img src="" alt="Image 1" >
+            <div class="flex-container" style="height: 500px; ">                  
+                <div class="flex-item" style="width: 25%; height: 50%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
+                        <h3>Event 1</h3>
+                        <p>Event Description</p>
                 </div>          
-                <div class="flex-item" style="width: 50%; height: 60%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">
-                    <img src="" alt="Image 1" >
+                <div class="flex-item" style="width: 25%; height: 50%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
+                    <div>
+                        <h3>Event 2</h3>
+                        <p>Event Description</p>
+                    </div>
                 </div>   
-                <div class="flex-item" style="width: 50%; height: 60%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">
-                    <img src="" alt="Image 1" >
-                </div>   
+                <div class="flex-item" style="width: 25%; height: 50%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
+                    <div>
+                        <h3>Event 3</h3>
+                        <p>Event Description</p>
+                    </div>                   
                 </div>
-            </div> 
-        </div>
+            <a class="carousel-control-prev2" onclick="prevSlide()">&#10094;</a>
+            <a class="carousel-control-next2" onclick="nextSlide()">&#10095;</a>
+        </div>         
+    </div>
 
         <br/><br/><br/><br/>
-            <div class="flex-container">
-                <div class="flex-item">
-                    <h3>Flex Item 1</h3>
-                    <p>This is the content for the first flex item.</p>
-                    <p>This is the content for the first flex item.</p>
-                    <p>This is the content for the first flex item.</p>
-                    <p>This is the content for the first flex item.</p>
-                    <p>This is the content for the first flex item.</p>
-                    <p>This is the content for the first flex item.</p>
-                    <p>This is the content for the first flex item.</p>
-                    <p>This is the content for the first flex item.</p>
-                </div>
-                <div class="flex-item">
-                    <h3>Flex Item 2</h3>
-                    <p style="text-align: left;">Army Public School Noida is a co-educational school affiliated to CBSE. The school was established in 1995 and is managed by the Army Welfare Education Society (AWES). The school aims to provide quality education to the children of Army personnel and civilians. The school has a well-qualified and experienced faculty that is dedicated to the overall development of the students.</p>
-                        <br>
-                </div>
+        <!-- <div class="flex-container">
+            <div class="flex-item">
+                <h3>Flex Item 1</h3>
+                <p>This is the content for the first flex item.</p>
+                <p>This is the content for the first flex item.</p>
+                <p>This is the content for the first flex item.</p>
+                <p>This is the content for the first flex item.</p>
+                <p>This is the content for the first flex item.</p>
+                <p>This is the content for the first flex item.</p>
+                <p>This is the content for the first flex item.</p>
+                <p>This is the content for the first flex item.</p>
             </div>
+            <div class="flex-item">
+                <h3>Flex Item 2</h3>
+                <p style="text-align: left;">Army Public School Noida is a co-educational school affiliated to CBSE. The school was established in 1995 and is managed by the Army Welfare Education Society (AWES). The school aims to provide quality education to the children of Army personnel and civilians. The school has a well-qualified and experienced faculty that is dedicated to the overall development of the students.</p>
+                    <br>
+            </div>
+        </div> -->
 
   
-        <footer>
-            <p>&copy; 2025 Army Public School Noida. All rights reserved.</p>
-            <p>Contact us: <a href="mailto:info@apsnoida.edu.in">info@apsnoida.edu.in</a></p>
-        <div class="social-media"></div>
-            <a href="" target="_blank">
-                <img src="" alt="Facebook">
-            </a>
-            <a href="" target="_blank">
-                <img src="" alt="Twitter">
-            </a>
-            <a href="" target="_blank">
-                <img src="" alt="Instagram">
-            </a>
-            <a href="" target="_blank">
-                <img src="" alt="LinkedIn">
-            </a>
-        </div>
-        </footer>
+    <footer>
+        <p>&copy; 2025 Army Public School Noida. All rights reserved.</p>
+        <p>Contact us: <a href="mailto:info@apsnoida.edu.in">info@apsnoida.edu.in</a></p>
+    <div class="social-media"></div>
+        <a href="" target="_blank">
+            <img src="" alt="Facebook">
+        </a>
+        <a href="" target="_blank">
+            <img src="" alt="Twitter">
+        </a>
+        <a href="" target="_blank">
+            <img src="" alt="Instagram">
+        </a>
+        <a href="" target="_blank">
+            <img src="" alt="LinkedIn">
+        </a>
+    </div>
+    </footer>
         
         <!-- Scripts -->
     <script src="script.js"></script> 
