Updates to Principal Section

--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,16 @@
                 </div>
             </div>
             <div class="flex-container" style="width:80%; height: 400px; margin: 0 auto;">  
-                <div style="border-radius: 50%; overflow: hidden; width: 55%; height: 100%; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+                <div style="border-radius: 200px;; overflow: hidden; width: 450px; height: 300px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);" class="flex-item">
                     <img src="/principal.png" alt="Image 1" style="width: 100%; height: 100%; object-fit: cover; transform: scale(1.2) translateX(20px);">
-                </div>          
-                <div class="flex-item" style="width: 100%; height: 50%; display: flex; justify-content: center; align-items: center;">
-                    <section id="our-motto" style="width: 80%;">
-                        <p style="font-style: italic; border-left: 5px solid #ccc; padding-left: 10px; margin: 20px 0; text-align: justify;">
-                            "Education is the best investment for our future generations. Towards this, Army Public School Noida has dedicated itself to impart inclusive education to the students for their holistic and all round development. At an impressionable and tender age, the children cannot be expected to be sagacious enough to discriminate between ethical and unethical, moral and immoral, good and evil. However, I expect them to achieve a perfect blend of competence and character so as to strengthen the social fibre."
+                </div>
+                <div class="flex-item">
+                    &nbsp;&nbsp;&nbsp;
+                </div>       
+                <div class="flex-item" style="width: 100%; height: 50%; display: flex; justify-content: center; align-items: center; background-color:#e8c9c9">
+                    <section id="our-motto" style="width: 90%;">
+                        <p style="font-style: italic; border-left: 5px solid #e67c7c; padding-left: 10px; margin: 20px 0; text-align: justify; font-family: 'Georgia', serif; font-size: 1.1em;">
+                            "Education is the best investment for our future generations. Towards this, Army Public School Noida has dedicated itself to impart inclusive education to the students for their holistic and all round development. At an impressionable and tender age, the children cannot be expected to be sagacious enough to discriminate between ethical and unethical, moral and immoral, good and evil. However, I expect them to achieve a perfect blend of competence and character so as to strengthen the social fibre. APS NOIDA exposes students to a resume of multifarious activities and I am sanguine that they make full use of these to explore their creative talent."
                         </p>
                     </section>
                 </div>
@@ -152,20 +155,20 @@
             
 
             <div class="flex-container" style="height: 500px; ">                  
-                <div class="flex-item" style="width: 25%; height: 50%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
-                        <h3>Event 1</h3>
-                        <p>Event Description</p>
+                <div class="flex-item" style="width: 25%; height: 60%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
+                        <h3>Learning Excellence</h3>
+                        <p>Commitment to excellence in teaching and learning.</p>
                 </div>          
-                <div class="flex-item" style="width: 25%; height: 50%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
+                <div class="flex-item" style="width: 25%; height: 60%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
                     <div>
-                        <h3>Event 2</h3>
-                        <p>Event Description</p>
+                        <h3>Student-Centeric</h3>
+                        <p>Igniting curious minds and awakening generous hearts.</p>
                     </div>
                 </div>   
-                <div class="flex-item" style="width: 25%; height: 50%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
+                <div class="flex-item" style="width: 25%; height: 60%; border-radius: 20px; background-color: #f2f2f2; border: 1px solid black;">                    
                     <div>
-                        <h3>Event 3</h3>
-                        <p>Event Description</p>
+                        <h3>21st Century Skills</h3>
+                        <p>Learn with passion to live with purpose for a better tomorrow.</p>
                     </div>                   
                 </div>
             <a class="carousel-control-prev2" onclick="prevSlide()">&#10094;</a>
@@ -195,8 +198,8 @@
 
   
     <footer>
-        <p>&copy; 2025 Army Public School Noida. All rights reserved.</p>
-        <p>Contact us: <a href="mailto:info@apsnoida.edu.in">info@apsnoida.edu.in</a></p>
+        <p style="color:white">&copy; 2025 Army Public School Noida. All rights reserved.</p>
+        <p style="color:white">Contact us: <a href="mailto:info@apsnoida.edu.in">info@apsnoida.edu.in</a></p>
     <div class="social-media"></div>
         <a href="" target="_blank">
             <img src="" alt="Facebook">
